--- a/index.html
+++ b/index.html
@@ -9,9 +9,21 @@
 </head>
 
 <body>
+    <header>
+        <a href="#" class="logo">Recrutamento</a>
+        <div class="toggle"></div>
+        <ul>
+            <li><a href="#">Início</a></li>
+            <li><a href="#">Quem somos</a></li>
+            <li><a href="#">Porque fazer parte</a></li>
+            <li><a href="#">Candidate-se</a></li>
+            <li><a href="#">Hackathons/Processos Seletivos</a></li>
+            <li><a href="#">Educa Cidadão</a></li>
+        </ul>
+    </header>
     <section class="banner">
         <div class="textBx">
-            <h2>Plataforma de Recrutamento das Operações Shopping Cidadão. </h2>
+            <h2><span> Shopping Cidadão. </span></h2>
             <h3>Democratizando atendimentos públicos!</h3>
             <a href="#" class="btn">Sobre a gente</a>
         </div>
