--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="toggle"></div>
       <ul>
         <li><a href="#">Quem somos</a></li>
-        <li><a href="#">Porque fazer parte</a></li>
+        <li><a href="#">Trabalhe conosco</a></li>
         <li><a href="#">Candidate-se</a></li>
         <li><a href="#">Processos Seletivos</a></li>
         <li><a href="#">Educa Cidadão</a></li>
@@ -49,6 +49,39 @@
         </div>
       </div>
     </section>
+
+    <section class="work">
+      <div class="heading">
+        <h2>Trabalhe conosco</h2>
+      </div>
+      <div class="content2">
+        <div class="video">
+          <iframe
+            height="100%"
+            width="100%"
+            loading="lazy"
+            src="https://player.vimeo.com/video/407284473"
+            frameborder="0"
+            allow="autoplay; fullscreen"
+            allowfullscreen=""
+            name="fitvid0"
+          ></iframe>
+        </div>
+        <div class="workBx">
+          <h3>Excelência em prestação de serviços!</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum
+            eaque, quia quod fugiat voluptas, voluptates ullam iste explicabo
+            iusto, perferendis fugit natus ab rem a possimus qui molestiae modi
+            cupiditate!<br /><br />Lorem ipsum dolor sit amet consectetur,
+            adipisicing elit. Architecto dolorum excepturi tenetur iure totam
+            beatae debitis libero, labore sunt placeat ad aliquam, soluta hic
+            molestias? Itaque nemo molestias voluptatum saepe.
+          </p>
+        </div>
+      </div>
+    </section>
+
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script>
       $(window).scroll(function () {
