--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       <ul>
         <li><a href="#">Quem somos</a></li>
         <li><a href="#">Trabalhe conosco</a></li>
-        <li><a href="#">Candidate-se</a></li>
-        <li><a href="#">Processos Seletivos</a></li>
+        <li><a href="#">Candidate-se | Processos Seletivos</a></li>
         <li><a href="#">Educa Cidadão</a></li>
       </ul>
     </header>
+
     <section class="banner">
       <div class="textBx">
         <h2><span> Shopping do Cidadão </span></h2>
@@ -51,7 +51,7 @@
     </section>
 
     <section class="work">
-      <div class="heading">
+      <div class="heading white">
         <h2>Trabalhe conosco</h2>
       </div>
       <div class="content2">
@@ -78,6 +78,23 @@
             beatae debitis libero, labore sunt placeat ad aliquam, soluta hic
             molestias? Itaque nemo molestias voluptatum saepe.
           </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="candidate">
+      <div class="heading black">
+        <h2>Candidate-se</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+      </div>
+      <div class="content3">
+        <div class="candBx">
+          <img src="/images/seletivo.jpg" class="img" />
+          <h3>Processos Seletivos<br /><span>Em destaque: </span></h3>
+        </div>
+        <div class="candBx2">
+          <img src="/images/hackathon.jpg" class="img" />
+          <h3>Hackathons<br /><span>Data do próximo evento: </span></h3>
         </div>
       </div>
     </section>
