educa_cidadao.updates

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Shopping do Cidadão | Recrutamento</title>
     <link rel="stylesheet" href="style.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+    />
   </head>
 
   <body>
@@ -117,6 +122,53 @@
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci
           saepe delectus eveniet explicabo. Sequi unde eaque voluptatibus.
         </p>
+      </div>
+      <div class="slider owl-carousel">
+        <div class="card">
+          <div class="img"><img src="/images/curso1.jpeg" alt="" /></div>
+          <div class="content4">
+            <div class="title">Fotográfia</div>
+            <div class="sub-title">Prof. Reinaldo</div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic saepe
+              obcaecati tempora veritatis similique labore et adipisci cum?
+              Consequatur, ullam.
+            </p>
+            <div class="btn2">
+              <button>Mais info.</button>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="img"><img src="/images/curso2.jpeg" alt="" /></div>
+          <div class="content4">
+            <div class="title">Programação</div>
+            <div class="sub-title">Profª. Patrica</div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic saepe
+              obcaecati tempora veritatis similique labore et adipisci cum?
+              Consequatur, ullam.
+            </p>
+            <div class="btn2">
+              <button>Mais info.</button>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="img"><img src="/images/curso3.jpeg" alt="" /></div>
+          <div class="content4">
+            <div class="title">Comunicação</div>
+            <div class="sub-title">Prof. Sandro</div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic saepe
+              obcaecati tempora veritatis similique labore et adipisci cum?
+              Consequatur, ullam.
+            </p>
+            <div class="btn2">
+              <button>Mais info.</button>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
