--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
   <body>
@@ -22,6 +23,7 @@
         <li><a href="#work">Trabalhe conosco</a></li>
         <li><a href="#cand">Candidate-se | Processos Seletivos</a></li>
         <li><a href="#educa">Educa Cidadão</a></li>
+        <li><a href="#">Login</a></li>
       </ul>
     </header>
 
@@ -172,7 +174,60 @@
       </div>
     </section>
 
-    <!--FOOTER: https://www.youtube.com/watch?v=B4KZYsyuVOE&ab_channel=OnlineTutorials-->
+    <footer>
+      <div class="container">
+        <div class="sec aboutus">
+          <h2>Shopping do Cidadão</h2>
+          <p>Democratizando atendimentos públicos.</p>
+          <ul class="sci">
+            <li>
+              <a href="https://www.linkedin.com/company/shopping-do-cidad%C3%A3o/?originalSubdomain=br" target="_blanck"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+            </li>
+            <li>
+              <a href="https://www.youtube.com/watch?v=JnXIsWupzUQ&ab_channel=ShoppingdoCidad%C3%A3o" target="_blanck"
+                ><i class="fa fa-youtube-play" aria-hidden="true"></i
+              ></a>
+            </li>
+          </ul>
+        </div>
+        <div class="sec quickLinks">
+          <h2>Saiba mais</h2>
+          <ul>
+            <li><a href="https://shopcidadao.com.br/sobre-nos/" target="_blanck">Sobre nós</a></li>
+            <li><a href="https://shopcidadao.com.br/sou-governo/" target="_blanck">Sou Governo</a></li>
+            <li><a href="https://shopcidadao.com.br/sou-cidadao/" target="_blanck">Sou Cidadão</a></li>
+            <li><a href="https://shopcidadao.com.br/programas-de-governo/" target="_blanck">Programas de Governo</a></li>
+            <li><a href="https://shopcidadao.com.br/govdigital/" target="_blanck">+GOVdigital</a></li>
+            <li><a href="https://shopcidadao.com.br/fique-por-dentro/" target="_blanck">Fique por dentro</a></li>
+          </ul>
+        </div>
+        <div class="sec quickLinks">
+          <h2>...</h2>
+          <ul>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Política de Privacidade</a></li>
+            <li><a href="#">Termos e Condições</a></li>
+          </ul>
+        </div>
+        <div class="sec contact">
+          <h2>Info. de Contato</h2>
+          <ul class="info">
+            <li>
+              <span><i class="fa fa-map-marker" aria-hidden="true"></i></span>
+              <span>Av. Brigadeiro Faria Lima, 2066<br>São Paulo, SP 01451-000,<br>BR</span>
+            </li>
+            <li>
+              <span><i class="fa fa-phone" aria-hidden="true"></i></span>
+              <p><a href="tel:+55(11)97299-9505">+55(11)97299-9505</a></p>
+            </li>
+            <li>
+              <span><i class="fa fa-envelope" aria-hidden="true"></i></i></span>
+              <p><a href="mailto:marketing@shopcidadao.com.br">marketing@shopcidadao.com.br</a></p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
 
     <script>
       $(window).scroll(function () {
