--- a/index.html
+++ b/index.html
@@ -1,257 +1,248 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="UTF-8" />
-    <title>Shopping do Cidadão | Recrutamento</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
-    />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  </head>
 
-  <body>
-    <header>
-      <a href="#home" class="logo">Recrutamento</a>
-      <div class="toggle"></div>
-      <ul>
-        <li><a href="#about">Quem somos</a></li>
-        <li><a href="#work">Trabalhe conosco</a></li>
-        <li><a href="#cand">Candidate-se | Processos Seletivos</a></li>
-        <li><a href="#educa">Educa Cidadão</a></li>
-        <li><a href="#">Login</a></li>
-      </ul>
-    </header>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8" />
+  <title>Shopping do Cidadão | Recrutamento</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
 
-    <section class="banner" id="home">
-      <div class="textBx">
-        <h2><span> Shopping do Cidadão </span></h2>
+<body>
+  <header>
+    <a href="#home" class="logo">Recrutamento</a>
+    <div class="toggle"></div>
+    <ul>
+      <li><a href="#about">Quem somos</a></li>
+      <li><a href="#work">Trabalhe conosco</a></li>
+      <li><a href="#cand">Candidate-se | Processos Seletivos</a></li>
+      <li><a href="#educa">Educa Cidadão</a></li>
+      <li><a href="/subpages/login.html">Login</a></li>
+    </ul>
+  </header>
+
+  <section class="banner" id="home">
+    <div class="textBx">
+      <h2><span> Shopping do Cidadão </span></h2>
+      <h3>Democratizando atendimentos públicos!</h3>
+      <a href="#about" class="btn">Sobre a gente</a>
+    </div>
+  </section>
+  <section class="about" id="about">
+    <div class="heading">
+      <h2>Quem somos</h2>
+    </div>
+    <div class="content">
+      <div class="contentBx w50">
         <h3>Democratizando atendimentos públicos!</h3>
-        <a href="#about" class="btn">Sobre a gente</a>
-      </div>
-    </section>
-    <section class="about" id="about">
-      <div class="heading">
-        <h2>Quem somos</h2>
-      </div>
-      <div class="content">
-        <div class="contentBx w50">
-          <h3>Democratizando atendimentos públicos!</h3>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti
-            aliquam possimus, error esse voluptate exercitationem tempora dolor
-            quos facilis minima sapiente optio autem minus necessitatibus
-            temporibus, dolore eius rem praesentium.<br /><br />Lorem ipsum
-            dolor sit amet consectetur adipisicing elit. Optio expedita illo,
-            quos voluptates cupiditate saepe ratione aliquam minima soluta
-            numquam ipsum vel fuga iure quasi natus nisi minus nesciunt
-            veritatis.
-          </p>
-        </div>
-        <div class="w50">
-          <img src="/images/img1.png" class="img" />
-        </div>
-      </div>
-    </section>
-
-    <section class="work" id="work">
-      <div class="heading white">
-        <h2>Trabalhe conosco</h2>
-      </div>
-      <div class="content2">
-        <div class="video">
-          <iframe
-            height="100%"
-            width="100%"
-            loading="lazy"
-            src="https://player.vimeo.com/video/407284473"
-            frameborder="0"
-            allow="autoplay; fullscreen"
-            allowfullscreen=""
-            name="fitvid0"
-          ></iframe>
-        </div>
-        <div class="workBx">
-          <h3>Excelência em prestação de serviços!</h3>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum
-            eaque, quia quod fugiat voluptas, voluptates ullam iste explicabo
-            iusto, perferendis fugit natus ab rem a possimus qui molestiae modi
-            cupiditate!<br /><br />Lorem ipsum dolor sit amet consectetur,
-            adipisicing elit. Architecto dolorum excepturi tenetur iure totam
-            beatae debitis libero, labore sunt placeat ad aliquam, soluta hic
-            molestias? Itaque nemo molestias voluptatum saepe.
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <section class="candidate" id="cand">
-      <div class="heading black">
-        <h2>Candidate-se</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-      </div>
-      <div class="content3">
-        <div class="candBx" id="candBx">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
-            molestias id enim dolorum cupiditate? Fuga quas, facere cumque
-            facilis ipsa delectus itaque, atque dolore iure tenetur, rerum sint
-            consectetur accusamus.
-          </p>
-          <h3>Processos Seletivos<br /><span>Em destaque: </span></h3>
-        </div>
-        <div class="candBx2" id="candBx2">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
-            molestias id enim dolorum cupiditate? Fuga quas, facere cumque
-            facilis ipsa delectus itaque, atque dolore iure tenetur, rerum sint
-            consectetur accusamus.
-          </p>
-          <h3>Hackathons<br /><span>Data do próximo evento: </span></h3>
-        </div>
-      </div>
-    </section>
-
-    <section class="educa" id="educa">
-      <div class="heading white">
-        <h2>Educa Cidadão</h2>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci
-          saepe delectus eveniet explicabo. Sequi unde eaque voluptatibus.
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti
+          aliquam possimus, error esse voluptate exercitationem tempora dolor
+          quos facilis minima sapiente optio autem minus necessitatibus
+          temporibus, dolore eius rem praesentium.<br /><br />Lorem ipsum
+          dolor sit amet consectetur adipisicing elit. Optio expedita illo,
+          quos voluptates cupiditate saepe ratione aliquam minima soluta
+          numquam ipsum vel fuga iure quasi natus nisi minus nesciunt
+          veritatis.
         </p>
       </div>
-      <div class="slider owl-carousel">
-        <div class="card">
-          <div class="img"><img src="/images/curso1.jpeg" alt="" /></div>
-          <div class="content4">
-            <div class="title">Fotográfia</div>
-            <div class="sub-title">Prof. Reinaldo</div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic saepe
-              obcaecati tempora veritatis similique labore et adipisci cum?
-              Consequatur, ullam.
-            </p>
-            <div class="btn2">
-              <button>Mais info.</button>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="img"><img src="/images/curso2.jpeg" alt="" /></div>
-          <div class="content4">
-            <div class="title">Programação</div>
-            <div class="sub-title">Profª. Patrica</div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic saepe
-              obcaecati tempora veritatis similique labore et adipisci cum?
-              Consequatur, ullam.
-            </p>
-            <div class="btn2">
-              <button>Mais info.</button>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="img"><img src="/images/curso3.jpeg" alt="" /></div>
-          <div class="content4">
-            <div class="title">Comunicação</div>
-            <div class="sub-title">Prof. Sandro</div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic saepe
-              obcaecati tempora veritatis similique labore et adipisci cum?
-              Consequatur, ullam.
-            </p>
-            <div class="btn2">
-              <button>Mais info.</button>
-            </div>
+      <div class="w50">
+        <img src="/images/img1.png" class="img" />
+      </div>
+    </div>
+  </section>
+
+  <section class="work" id="work">
+    <div class="heading white">
+      <h2>Trabalhe conosco</h2>
+    </div>
+    <div class="content2">
+      <div class="video">
+        <iframe height="100%" width="100%" loading="lazy" src="https://player.vimeo.com/video/407284473" frameborder="0"
+          allow="autoplay; fullscreen" allowfullscreen="" name="fitvid0"></iframe>
+      </div>
+      <div class="workBx">
+        <h3>Excelência em prestação de serviços!</h3>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum
+          eaque, quia quod fugiat voluptas, voluptates ullam iste explicabo
+          iusto, perferendis fugit natus ab rem a possimus qui molestiae modi
+          cupiditate!<br /><br />Lorem ipsum dolor sit amet consectetur,
+          adipisicing elit. Architecto dolorum excepturi tenetur iure totam
+          beatae debitis libero, labore sunt placeat ad aliquam, soluta hic
+          molestias? Itaque nemo molestias voluptatum saepe.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <section class="candidate" id="cand">
+    <div class="heading black">
+      <h2>Candidate-se</h2>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+    </div>
+    <div class="content3">
+      <div class="candBx" id="candBx">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
+          molestias id enim dolorum cupiditate? Fuga quas, facere cumque
+          facilis ipsa delectus itaque, atque dolore iure tenetur, rerum sint
+          consectetur accusamus.
+        </p>
+        <h3>Processos Seletivos<br /><span>Em destaque: </span></h3>
+      </div>
+      <div class="candBx2" id="candBx2">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae
+          molestias id enim dolorum cupiditate? Fuga quas, facere cumque
+          facilis ipsa delectus itaque, atque dolore iure tenetur, rerum sint
+          consectetur accusamus.
+        </p>
+        <h3>Hackathons<br /><span>Data do próximo evento: </span></h3>
+      </div>
+    </div>
+  </section>
+
+  <section class="educa" id="educa">
+    <div class="heading white">
+      <h2>Educa Cidadão</h2>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci
+        saepe delectus eveniet explicabo. Sequi unde eaque voluptatibus.
+      </p>
+    </div>
+    <div class="slider owl-carousel">
+      <div class="card">
+        <div class="img"><img src="/images/curso1.jpeg" alt="" /></div>
+        <div class="content4">
+          <div class="title">Fotográfia</div>
+          <div class="sub-title">Prof. Reinaldo</div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic saepe
+            obcaecati tempora veritatis similique labore et adipisci cum?
+            Consequatur, ullam.
+          </p>
+          <div class="btn2">
+            <button>Mais info.</button>
           </div>
         </div>
       </div>
-    </section>
-
-    <footer>
-      <div class="container">
-        <div class="sec aboutus">
-          <h2>Shopping do Cidadão</h2>
-          <p>Democratizando atendimentos públicos.</p>
-          <ul class="sci">
-            <li>
-              <a href="https://www.linkedin.com/company/shopping-do-cidad%C3%A3o/?originalSubdomain=br" target="_blanck"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-            </li>
-            <li>
-              <a href="https://www.youtube.com/watch?v=JnXIsWupzUQ&ab_channel=ShoppingdoCidad%C3%A3o" target="_blanck"
-                ><i class="fa fa-youtube-play" aria-hidden="true"></i
-              ></a>
-            </li>
-          </ul>
-        </div>
-        <div class="sec quickLinks">
-          <h2>Saiba mais</h2>
-          <ul>
-            <li><a href="https://shopcidadao.com.br/sobre-nos/" target="_blanck">Sobre nós</a></li>
-            <li><a href="https://shopcidadao.com.br/sou-governo/" target="_blanck">Sou Governo</a></li>
-            <li><a href="https://shopcidadao.com.br/sou-cidadao/" target="_blanck">Sou Cidadão</a></li>
-            <li><a href="https://shopcidadao.com.br/programas-de-governo/" target="_blanck">Programas de Governo</a></li>
-            <li><a href="https://shopcidadao.com.br/govdigital/" target="_blanck">+GOVdigital</a></li>
-            <li><a href="https://shopcidadao.com.br/fique-por-dentro/" target="_blanck">Fique por dentro</a></li>
-          </ul>
-        </div>
-        <div class="sec quickLinks">
-          <h2>...</h2>
-          <ul>
-            <li><a href="#">FAQ</a></li>
-            <li><a href="#">Política de Privacidade</a></li>
-            <li><a href="#">Termos e Condições</a></li>
-          </ul>
-        </div>
-        <div class="sec contact">
-          <h2>Info. de Contato</h2>
-          <ul class="info">
-            <li>
-              <span><i class="fa fa-map-marker" aria-hidden="true"></i></span>
-              <span>Av. Brigadeiro Faria Lima, 2066<br>São Paulo, SP 01451-000,<br>BR</span>
-            </li>
-            <li>
-              <span><i class="fa fa-phone" aria-hidden="true"></i></span>
-              <p><a href="tel:+55(11)97299-9505">+55(11)97299-9505</a></p>
-            </li>
-            <li>
-              <span><i class="fa fa-envelope" aria-hidden="true"></i></i></span>
-              <p><a href="mailto:marketing@shopcidadao.com.br">marketing@shopcidadao.com.br</a></p>
-            </li>
-          </ul>
+      <div class="card">
+        <div class="img"><img src="/images/curso2.jpeg" alt="" /></div>
+        <div class="content4">
+          <div class="title">Programação</div>
+          <div class="sub-title">Profª. Patrica</div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic saepe
+            obcaecati tempora veritatis similique labore et adipisci cum?
+            Consequatur, ullam.
+          </p>
+          <div class="btn2">
+            <button>Mais info.</button>
+          </div>
         </div>
       </div>
-    </footer>
+      <div class="card">
+        <div class="img"><img src="/images/curso3.jpeg" alt="" /></div>
+        <div class="content4">
+          <div class="title">Comunicação</div>
+          <div class="sub-title">Prof. Sandro</div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic saepe
+            obcaecati tempora veritatis similique labore et adipisci cum?
+            Consequatur, ullam.
+          </p>
+          <div class="btn2">
+            <button>Mais info.</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
-    <script>
-      $(window).scroll(function () {
-        if ($(window).scrollTop()) {
-          $('header').addClass('white');
-        } else {
-          $('header').removeClass('white');
-        }
-      });
+  <footer>
+    <div class="container">
+      <div class="sec aboutus">
+        <h2>Shopping do Cidadão</h2>
+        <p>Democratizando atendimentos públicos.</p>
+        <ul class="sci">
+          <li>
+            <a href="https://www.linkedin.com/company/shopping-do-cidad%C3%A3o/?originalSubdomain=br"
+              target="_blanck"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+          </li>
+          <li>
+            <a href="https://www.youtube.com/watch?v=JnXIsWupzUQ&ab_channel=ShoppingdoCidad%C3%A3o" target="_blanck"><i
+                class="fa fa-youtube-play" aria-hidden="true"></i></a>
+          </li>
+        </ul>
+      </div>
+      <div class="sec quickLinks">
+        <h2>Saiba mais</h2>
+        <ul>
+          <li><a href="https://shopcidadao.com.br/sobre-nos/" target="_blanck">Sobre nós</a></li>
+          <li><a href="https://shopcidadao.com.br/sou-governo/" target="_blanck">Sou Governo</a></li>
+          <li><a href="https://shopcidadao.com.br/sou-cidadao/" target="_blanck">Sou Cidadão</a></li>
+          <li><a href="https://shopcidadao.com.br/programas-de-governo/" target="_blanck">Programas de Governo</a></li>
+          <li><a href="https://shopcidadao.com.br/govdigital/" target="_blanck">+GOVdigital</a></li>
+          <li><a href="https://shopcidadao.com.br/fique-por-dentro/" target="_blanck">Fique por dentro</a></li>
+        </ul>
+      </div>
+      <div class="sec quickLinks">
+        <h2>...</h2>
+        <ul>
+          <li><a href="/subpages/faq.html">FAQ</a></li>
+          <li><a href="/subpages/privacy.html">Política de Privacidade</a></li>
+          <li><a href="/subpages/terms.html">Termos e Condições</a></li>
+        </ul>
+      </div>
+      <div class="sec contact">
+        <h2>Info. de Contato</h2>
+        <ul class="info">
+          <li>
+            <span><i class="fa fa-map-marker" aria-hidden="true"></i></span>
+            <span><a href="https://goo.gl/maps/yaUo2d8bi5yGkVUH6" target="_blanck"> Av. Brigadeiro Faria Lima,
+                2066<br>São Paulo, SP 01451-000,<br>BR</a></span>
+          </li>
+          <li>
+            <span><i class="fa fa-phone" aria-hidden="true"></i></span>
+            <p><a href="tel:+55(11)97299-9505">+55(11)97299-9505</a></p>
+          </li>
+          <li>
+            <span><i class="fa fa-envelope" aria-hidden="true"></i></i></span>
+            <p><a href="mailto:marketing@shopcidadao.com.br">marketing@shopcidadao.com.br</a></p>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 
-      $('.slider').owlCarousel({
-        loop: true,
-        autoplay: true,
-        autoplayTimeout: 5000,
-        autoplayHoverPause: true,
-      });
+  <script>
+    $(window).scroll(function () {
+      if ($(window).scrollTop()) {
+        $('header').addClass('white');
+      } else {
+        $('header').removeClass('white');
+      }
+    });
 
-      document.getElementById("candBx").onclick = function (){
-        window.open('');
-      };
-      document.getElementById("candBx2").onclick = function (){
-        window.open('');
-      };
-      
-    </script>
-  </body>
+    $('.slider').owlCarousel({
+      loop: true,
+      autoplay: true,
+      autoplayTimeout: 5000,
+      autoplayHoverPause: true,
+    });
+
+    document.getElementById("candBx").onclick = function () {
+      window.open('');
+    };
+    document.getElementById("candBx2").onclick = function () {
+      window.open('');
+    };
+  </script>
+</body>
+
 </html>
