--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <li><a href="#work">Trabalhe conosco</a></li>
       <li><a href="#cand">Candidate-se | Processos Seletivos</a></li>
       <li><a href="#educa">Educa Cidadão</a></li>
-      <li><a href="/subpages/login.html">Login</a></li>
+      <li><a href="/subpages/signin+up/seletivos.html">Login</a></li>
     </ul>
   </header>
 
